FS#5252: Fix wrong font size and font family in panel drop downs

--- a/skins/cention/panel.css
+++ b/skins/cention/panel.css
@@ -141,6 +141,8 @@ is its visual representation:
 .cke_panel_listItem
 {
 	margin: 0px;
+	font-family: Arial, Helvetica, Tahoma, Verdana, Sans-Serif;
+	font-size: 12px;
 }
 
 /* The child of .cke_panel_listItem. These elements contain spans which are
@@ -198,8 +200,8 @@ is its visual representation:
 /* The title of the entire panel which is visible on top of the list. */
 .cke_panel_grouptitle
 {
-	font-size: 11px;
-	font-family: 'Microsoft Sans Serif' , Tahoma, Arial, Verdana, Sans-Serif;
+	font-size: 12px;
+	font-family: Arial, Helvetica, Tahoma, Verdana, Sans-Serif;
 	font-weight: bold;
 	white-space: nowrap;
 	background-color: #dcdcdc;
